src/objects/Related_Organization__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number__c</fullName>
        <label>ADCVD Case Number</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <label>ADCVD Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD ME</fullName>
                </value>
                <value>
                    <fullName>AD NME</fullName>
                </value>
                <value>
                    <fullName>CVD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADCVD_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Order</label>
        <referenceTo>ADCVD_Order__c</referenceTo>
        <relationshipLabel>Related Organizations</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Organizations</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBP_Case_Number__c</fullName>
        <label>CBP Case Number</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Instruction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Instruction</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This record&apos;s Segment does not match the Custom Instruction&apos;s Segment.</errorMessage>
            <filterItems>
                <field>Custom_Instruction__c.Segment__c</field>
                <operation>equals</operation>
                <valueField>$Source.Segment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Custom_Instruction__c</referenceTo>
        <relationshipLabel>Related Organizations</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exporter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Related Organizations</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Representation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Representation</label>
        <referenceTo>Related_Organization__c</referenceTo>
        <relationshipLabel>Legal Representation</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Enterprise_Server_URL_390 , FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_390)) &amp; Id,  Related_Organization_Name__c , &apos;_self&apos;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litigation</label>
        <referenceTo>Litigation__c</referenceTo>
        <relationshipLabel>Related Organizations</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <formula>ADCVD_Order__c</formula>
        <label>Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Related Organizations</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Producer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <label>Product Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Organization_Name__c</fullName>
        <formula>Account__r.Name +&apos;--&apos;+ Name</formula>
        <label>Related Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Related Organizations</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individually Examined</fullName>
                </value>
                <value>
                    <fullName>Non-Selected</fullName>
                </value>
                <value>
                    <fullName>Separate Rule</fullName>
                </value>
                <value>
                    <fullName>No Shipments/No Shipment Claim</fullName>
                </value>
                <value>
                    <fullName>Rescinded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petitioner</fullName>
                </value>
                <value>
                    <fullName>Respondent</fullName>
                </value>
                <value>
                    <fullName>Customs Instructions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Organization</label>
    <nameField>
        <displayFormat>RO-{000000}</displayFormat>
        <label>Related Organization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Organizations</pluralLabel>
    <recordTypes>
        <fullName>Customs_Instructions_Only</fullName>
        <active>true</active>
        <label>Customs Instructions Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Petitioner_Respondent</fullName>
        <active>true</active>
        <label>Petitioner/Respondent</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Custom_Instructions_must_have_a_parent</fullName>
        <active>true</active>
        <description>Custom Instructions must have a parent (ADCVD Order, Investigation, Petition, Segment, or Suspension Agreement)</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Custom_Instruction__c)), ISBLANK( Segment__c ),  ISBLANK( ADCVD_Order__c ), ISBLANK( Petition__c ),  ISBLANK( Investigation__c ),  ISBLANK( Segment__r.Suspension_Agreement__c ))</errorConditionFormula>
        <errorMessage>Custom Instructions must have a parent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Segment_must_be_populated_if_ci_is</fullName>
        <active>true</active>
        <description>Segment must be populated if Custom Instruction is</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Custom_Instruction__c )), ISBLANK( Segment__c ))</errorConditionFormula>
        <errorMessage>You must have a segment if you have custom instructions.</errorMessage>
    </validationRules>
</CustomObject>